--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "core-js-pure": "^3.40.0",
+    "firebase": "^11.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.85.0",
